<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_restaurant"
                android:contentDescription="@string/food_image" />

            <TextView
                android:id="@+id/foodNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/hamada_food"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/foodDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/hamada_food_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/foodNameTextView"
                app:layout_constraintTop_toBottomOf="@+id/foodNameTextView" />

            <TextView
                android:id="@+id/foodCostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/_50"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/egpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/egp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/foodCostTextView"
                app:layout_constraintStart_toEndOf="@+id/foodCostTextView"
                app:layout_constraintTop_toTopOf="@+id/foodCostTextView" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="98dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>